# challenge

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile
Sources/: CMakeLists.txt  CMakePresets.json
Sources/HttpProcessorLib/: CMakeLists.txt  HttpProcessorUtils.cpp  HttpProcessorUtils.h  HttpRequest.h  Processor.cpp  Processor.h
Sources/Processor/: CMakeLists.txt  main.cpp
Tests/UnitTests/: CMakeLists.txt  HttpProcessorLibTests.cpp
